--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "http": "0.0.1-security",
     "http-errors": "~1.6.3",
+    "jwt-simple": "^0.5.6",
     "lodash": "^4.17.15",
     "moment": "^2.26.0",
     "morgan": "^1.9.1",
     "passport": "^0.4.1",
     "path": "^0.12.7",
-    "sequelize": "^5.21.10"
+    "sequelize": "^5.21.10",
+    "winston": "^3.2.1"
   }
 }
