--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.15",
     "moment": "^2.26.0",
     "morgan": "^1.9.1",
+    "mysql2": "^2.1.0",
     "passport": "^0.4.1",
     "path": "^0.12.7",
     "sequelize": "^5.21.10",
